# text-embeddings-inference

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  1753683755292-30b3431f487b4cc1863e57a81d78e289.sh  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile-amd  Dockerfile-arm64  Dockerfile-cpu-amd  Dockerfile-cuda  Dockerfile-cuda-all  Dockerfile-cuda-blackwell  Dockerfile-cuda-blackwell-all  Dockerfile-intel  Dockerfile-jetson  Dockerfile-neuron  Dockerfile-rocm  Dockerfile.neuron  Makefile  QWEN3_FIX_SUMMARY.md  README.md  README_MODIFICATIONS.md  compare_ner.py  compare_ner_implementations.py  cuda-all-entrypoint.sh  cuda-blackwell-all-entrypoint.sh  cuda-entrypoint.sh  eval.py  flake.nix  hf_reference_impl_ner.py  jetson-entrypoint.sh  push-docker-images.sh  router.pid  sagemaker-entrypoint-cuda-all.sh  sagemaker-entrypoint.sh  setup_rocm.sh  (+12 more)
backends/: Cargo.toml
backends/candle/: Cargo.toml  build.rs
backends/candle-bench/: Cargo.toml  Readme.md
backends/candle-bench/benches/: radix_mlp_benchmark.rs
backends/candle/src/: alibi.rs  compute_cap.rs  flash_attn.rs  flash_attn_cpu.rs  layers.rs  lib.rs  models.rs
backends/candle/src/layers/: cublaslt.rs  index_select.rs  layer_norm.rs  linear.rs  mod.rs  projector.rs  radix_mlp.rs  rotary.rs
backends/candle/src/models/: bert.rs  bert_quant.rs  bloom.rs  debertav2.rs  dense.rs  distilbert.rs  flash_bert.rs  flash_distilbert.rs  flash_gte.rs  flash_jina.rs  flash_jina_code.rs  flash_mistral.rs  flash_modernbert.rs  flash_nomic.rs  flash_pplx1.rs  flash_pplx1embed.rs  flash_qwen2.rs  flash_qwen3.rs  gemma3.rs  gte.rs  jina.rs  jina_code.rs  lbnl_reranker.rs  llama.rs  mistral.rs  mod.rs  modernbert.rs  mpnet.rs  nomic.rs  pplx1.rs  pplx1embed.rs  qwen2.rs  qwen3.rs  static_embedding.rs  tinygemma.rs
backends/candle/tests/: common.rs  test_bert.rs  test_debertav2.rs  test_dense.rs  test_flash_bert.rs  test_flash_gte.rs  test_flash_jina.rs  test_flash_jina_code.rs  test_flash_mistral.rs  test_flash_nomic.rs  test_flash_pplx1.rs  test_flash_pplx1embed.rs  test_flash_qwen2.rs  test_flash_qwen3.rs  test_flash_voyage_nano.rs  test_gemma3.rs  test_gemma3_equal_length_batch.rs  test_gte.rs  test_jina.rs  test_jina_code.rs  test_m3_sparse.rs  test_modernbert.rs  test_mpnet.rs  test_nomic.rs  test_pplx1.rs  test_pplx1embed.rs  test_qwen3.rs  test_qwen3_equal_length_batch.rs  test_qwen3_reranker.rs  test_static_embedding.rs  test_voyage_nano.rs
backends/candle/tests/fixtures/: README.md  m3_golden.json  m3_parity.py
backends/candle/tests/snapshots/: test_bert__bert_batch_pooled.snap  test_bert__bert_batch_raw.snap  test_bert__bert_classification_single.snap  test_bert__bert_single.snap  test_bert__bert_single_pooled.snap  test_bert__bert_single_raw.snap  test_bert__emotions_batch.snap  (+104 more)
backends/core/: Cargo.toml
backends/core/src/: lib.rs
backends/grpc-client/: Cargo.toml  build.rs
backends/grpc-client/src/: client.rs  lib.rs
backends/grpc-metadata/src/: lib.rs
backends/ort/: Cargo.toml
backends/ort/src/: bm42.rs  lib.rs
backends/proto/: embed.proto
backends/python/: Cargo.toml
backends/python/server/: Makefile  Makefile-flash-att  Makefile-flash-att-v2  README.md  pyproject.toml  requirements-amd.txt  requirements-hpu.txt  requirements-intel.txt  requirements-neuron.txt  requirements.txt
backends/python/src/: lib.rs  logging.rs  management.rs
backends/src/: dtype.rs  lib.rs
candle-extensions/candle-cublaslt/: .gitignore  Cargo.toml  README.md
candle-extensions/candle-cublaslt/src/: lib.rs
candle-extensions/candle-flash-attn-v1/: .gitmodules  Cargo.toml  README.md  build.rs
candle-extensions/candle-flash-attn-v1/kernels/: flash_api.cu  fmha.h  fmha_api.cpp  fmha_fprop_kernel_1xN.h  fmha_fwd_hdim128.cu  fmha_fwd_hdim32.cu  fmha_fwd_launch_template.h  fmha_kernel.h  fmha_utils.h  philox.cuh
candle-extensions/candle-flash-attn-v1/src/: ffi.rs  lib.rs
candle-extensions/candle-flash-attn-v1/tests/: flash_attn_tests.rs
candle-extensions/candle-layer-norm/: Cargo.toml  README.md  build.rs
candle-extensions/candle-layer-norm/kernels/: ln.h  ln_api.cu  ln_fwd_kernels.cuh  ln_kernel_traits.h  ln_utils.cuh
candle-extensions/candle-layer-norm/src/: lib.rs
candle-extensions/candle-rotary/: Cargo.toml  README.md  build.rs
candle-extensions/candle-rotary/kernels/: rotary.cu
candle-extensions/candle-rotary/src/: lib.rs
candle-extensions/candle-rotary/tests/: rotary_tests.rs
core/: Cargo.toml
core/src/: detection.rs  download.rs  infer.rs  lib.rs  prompt.rs  queue.rs  radix_mlp.rs  templates.rs  tokenization.rs
docs/: PLAN.md  (+7 more)
integration_tests/: Makefile  README.md  pyproject.toml
integration_tests/gaudi/: conftest.py  test_embed.py
integration_tests/neuron/: conftest.py  test_embed.py
router/: Cargo.toml  build.rs
router/src/: http.rs  lib.rs  logging.rs  main.rs  main_tests.rs  prometheus.rs  server.rs  shutdown.rs  strategy.rs  usage_stats.rs
router/src/grpc/: mod.rs  server.rs
router/src/http/: debugging.rs  listwise_handler.rs  mod.rs  ner.rs  server.rs  types.rs
router/src/listwise/: math.rs  mod.rs
router/tests/: common.rs  test_http_embed.rs  test_http_predict.rs  test_http_rerank.rs
router/tests/snapshots/: test_http_embed__embeddings_batch.snap  test_http_embed__embeddings_raw.snap  test_http_embed__embeddings_single.snap  test_http_embed__mrl_embeddings_batch.snap  test_http_embed__mrl_embeddings_single.snap  test_http_embed__mrl_embeddings_single.snap.new  test_http_predict__predictions_batch.snap  test_http_predict__predictions_single.snap  test_http_rerank__ranks.snap
text-embeddings-inference-client/: README.md  py_client_example.py  pyproject.toml
text-embeddings-inference-client/text_embeddings_inference_client/: __init__.py  types.py
text-embeddings-inference-client/text_embeddings_inference_client/models/: __init__.py  embed_request.py  error_response.py  error_type.py  open_ai_compat_embedding.py  open_ai_compat_error_response.py  open_ai_compat_request.py  open_ai_compat_response.py  open_ai_compat_usage.py
(+116 files in other folders)
