[package]
name = "text-embeddings-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
clap = { workspace = true, optional = true }
hf-hub = { workspace = true }
serde_json = { workspace = true }
text-embeddings-backend-core = { path = "core" }
text-embeddings-backend-python = { path = "python", optional = true }
text-embeddings-backend-candle = { path = "candle", optional = true }
text-embeddings-backend-ort = { path = "ort", optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[features]
clap = ["dep:clap", "text-embeddings-backend-core/clap"]
python = ["dep:text-embeddings-backend-python"]
ort = ["dep:text-embeddings-backend-ort"]
candle = ["dep:text-embeddings-backend-candle"]
cuda = ["text-embeddings-backend-candle?/cuda"]
metal = ["text-embeddings-backend-candle?/metal"]
mkl = ["text-embeddings-backend-candle?/mkl"]
mkl-dynamic = ["text-embeddings-backend-candle?/mkl-dynamic"]
accelerate = ["text-embeddings-backend-candle?/accelerate"]
static-linking = ["text-embeddings-backend-candle?/static-linking"]
flash-attn = ["text-embeddings-backend-candle?/flash-attn"]
flash-attn-v1 = ["text-embeddings-backend-candle?/flash-attn-v1"]
