[package]
name = "text-embeddings-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
hf-hub = { version = "^0.3.0", features = ["tokio"], default-features = false }
metrics = "^0.21"
text-embeddings-backend = { path = "../backends" }
thiserror = "^1.0"
tokenizers = { version = "^0.15.2", default-features = false, features = ["onig", "esaxx_fast"] }
tracing = "^0.1"
tokio = { version = "^1.25", features = ["rt", "rt-multi-thread", "parking_lot", "sync"] }
