[package]
name = "text-embeddings-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
async-channel = "^2.3"
hf-hub = { workspace = true }
metrics = { workspace = true }
serde_json = { workspace = true }
text-embeddings-backend = { path = "../backends" }
thiserror = { workspace = true }
tokenizers = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
radix_mlp = { version = "0.0.1" }

[dev-dependencies]
hf-hub = { workspace = true, features = ["ureq"] }