[project]
name = "text-embeddings-inference-integration-tests"
version = "2.0.1"
description = "Text Embeddings Inference integration tests"
requires-python = ">=3.10,<3.13"

dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.1",
    "docker>=7",
    "numpy>=2.0",
    "aiohttp>=3.11.18",
]

[tool.isort]
profile = "black"
