[package]
name = "text-embeddings-backend-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
thiserror = { workspace = true }
clap = { workspace = true, optional = true }
nohash-hasher = { workspace = true }

[features]
clap = ["dep:clap"]
