[package]
name = "text-embeddings-backend-ort"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
nohash-hasher = { workspace = true }
ndarray = "0.16.1"
num_cpus = { workspace = true }
ort = { version = "2.0.0-rc.10", default-features = false, features = ["std", "download-binaries", "half", "onednn", "ndarray"] }
ort-sys = { version = "=2.0.0-rc.10", default-features = false }  # https://github.com/pykeio/ort/issues/399
text-embeddings-backend-core = { path = "../core" }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
