[package]
name = "text-embeddings-backend-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
backend-grpc-client = { path = "../grpc-client" }
nohash-hasher = "^0.2"
serde = { version = "^1.0", features = ["derive"]  }
serde_json = "^1.0"
text-embeddings-backend-core = { path = "../core" }
thiserror = "^1.0"
tokio = { version = "^1.25", features = ["sync"] }
tracing = "^0.1"
